alignment-css-fix-and-alert-created

--- a/src/css/chess.css
+++ b/src/css/chess.css
@@ -6,11 +6,13 @@ body{
     -ms-user-select: none;
     user-select: none;
     width:100%;
-}
-
-body.light-mode{
     background-color: #f5f5f5;
     color: #141414;
+    overflow-x:hidden;
+    display: flex;
+    justify-content: center;
+    height:100vh;
+    align-items: center;
 }
 
 body.dark-mode{
@@ -20,12 +22,9 @@ body.dark-mode{
 
 /* -------------- Main START -------------- */
 .main{
-    width:1150px;
+    width:1200px;
+    justify-content: center;
     display:flex;
-    position: absolute;
-    top: 55%;
-    left: 40%;
-    margin: -500px 0 0 -500px;
 }
 /* -------------- Main End -------------- */
 
@@ -227,3 +226,30 @@ span.square-id{
     font-size: 12px;
 }
 /* -------------- Squares End -------------- */
+
+/* -------------- Alert Start -------------- */
+.alert{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding:15px;
+    border-radius: 15px;
+    background-color: #fff;
+    box-shadow: 0px 0px 15px #000;
+    z-index: 99;
+    color:#000;
+}
+
+#alert .confirm-buttons{
+    margin-top:15px;
+    justify-content: center;
+    display: flex;
+}
+
+#confirm .confirm-buttons{
+    margin-top:15px;
+    justify-content: space-between;
+    display: flex;
+}
+/* -------------- Alert End -------------- */
